--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,9 @@ body {
   font-family: "Karla", system-ui, sans-serif;
   overflow-x: hidden;
 }
-
+h2 {
+    color: rgba(61, 207, 182, 0.8);
+}
 .container {
   width: min(var(--container), calc(100% - var(--gutter-desktop)));
   margin-inline: auto;
