pokedex to pojects added

--- a/src/app/pages/home/sections/projects/projects.component.html
+++ b/src/app/pages/home/sections/projects/projects.component.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="github-cta">
-      <a href="https://github.com/milosdimi" target="_blank" rel="noopener noreferrer" class="mono">
+      <a href="https://github.com/milosdimi?tab=repositories" target="_blank" rel="noopener noreferrer" class="mono">
         Want to see more projects? <span class="cta-arrow">↗</span>
       </a>
     </div>
