--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,4 +2,5 @@
 <app-about></app-about>
 <app-skills></app-skills>
 <app-projects></app-projects>
+<app-references></app-references>
 <app-contact></app-contact>
