privacy, imprint, footer, cookie added

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,26 @@
-<footer style="padding: 16px;">
-    <a routerLink="/impressum">Impressum</a>
-    <span> · </span>
-    <a routerLink="/datenschutz">Datenschutz</a>
+<footer class="footer">
+    <div class="footer__container">
+        <!-- LEFT -->
+        <div class="footer__left">
+            <img src="assets/logo/logo_grau.png" alt="Logo" class="footer__logo" />
+            <div class="footer__info">
+                <strong>DIMIT</strong>
+                <span>Web Developer</span>
+                <span>Kufstein , Austria</span>
+            </div>
+        </div>
+
+        <!-- CENTER -->
+        <div class="footer__center">
+            © Milos Dimitrijevic {{ year }}
+        </div>
+
+        <!-- RIGHT -->
+        <div class="footer__right">
+            <a href="https://github.com/milosdimi" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/milos-dimitrijevic-35a552195" target="_blank">LinkedIn</a>
+            <a routerLink="/impressum">Impressum</a>
+            <a routerLink="/datenschutz">Datenschutz</a>
+        </div>
+    </div>
 </footer>
